--- a/AspNetCoreApi-Boilerplate/AspNetCoreApi-Boilerplate/appsettings.json
+++ b/AspNetCoreApi-Boilerplate/AspNetCoreApi-Boilerplate/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionString": {
+    "DefaultConnection": "Server=localhost;Database=BoilerplateApi;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
