--- a/AspNetCoreApi-Boilerplate/AspNetCoreApi-Boilerplate/appsettings.json
+++ b/AspNetCoreApi-Boilerplate/AspNetCoreApi-Boilerplate/appsettings.json
@@ -6,6 +6,21 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "RollingFile",
+        "Args": {
+          "pathFormat": "C:\\Temp\\log-{Date}.txt",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "Common feature in WebApi demo"
+    }
+  },
   "ConnectionString": {
     "DefaultConnection": "Server=localhost;Database=BoilerplateApi;Trusted_Connection=True;"
   },
