--- a/AspNetCoreApi-Boilerplate/AspNetCoreApi-Boilerplate/appsettings.json
+++ b/AspNetCoreApi-Boilerplate/AspNetCoreApi-Boilerplate/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "$(AzurePipelineSecretToBeSet)"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
